optimize for kafka producer and failover output constructor